# gmpp

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  cli.md  components.md  config.md  cookbook.md  getting-started.md  index.md  metrics.md
docs/concepts/: component.md  document.md  pipeline.md  registry.md
docs/cookbook/: compare-extractors.md  custom-component.md  index.md  page-router.md  parameter-sweep.md  preprocessing.md  reproduce-wceb.md
docs/stylesheets/: extra.css
src/gmpp/: __init__.py  cli.py  component.py  document.py  eval.py  io.py  pipeline.py  registry.py
src/gmpp/components/: __init__.py  inscriptis.py  justext.py  newspaper.py  readability.py  trafilatura.py
tasks/: architecture.md  lessons.md  todo.md
tests/: conftest.py  test_cli.py  test_component.py  test_document.py  test_eval.py  test_io.py  test_pipeline.py  test_registry.py
validation/: .gitignore  run_wceb.py
