[project]
name = "gmpp"
version = "0.1.0"
description = "Lightweight framework for comparing HTML content extraction strategies"
requires-python = ">=3.12"
dependencies = ["click"]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
trafilatura = ["trafilatura"]
readability = ["readability-lxml", "lxml_html_clean"]
justext = ["justext"]
newspaper = ["newspaper4k"]
inscriptis = ["inscriptis"]
eval = ["rouge-score", "python-Levenshtein"]
all = ["gmpp[trafilatura,readability,justext,newspaper,inscriptis,eval]"]
dev = ["gmpp[all]", "pytest", "ruff"]

[project.scripts]
gmpp = "gmpp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
